--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,23 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
-
         android:theme="@style/Theme.SpecialNeeds">
-        <activity android:name=".CalendarActivity"></activity>
-
-        <activity android:name=".SignInActivity"
-            android:windowSoftInputMode="adjustResize"/>
-
-        <activity android:name=".CreateVolunteerActivity"
-            android:windowSoftInputMode="adjustResize"/>
-
-        <activity android:name=".CreateUserActivity"
+        <activity android:name=".displayDB"></activity>
+        <activity android:name=".CalendarActivity" />
+        <activity
+            android:name=".SignInActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".CreateVolunteerActivity"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".CreateUserActivity"
             android:windowSoftInputMode="stateVisible|adjustResize" />
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
